# Gate_rail

./: .gitignore  AGENTS.md  DESIGN_NOTES.md  GAME_VISION.md  GEMINI.md  PHASE2_PLAN.md  PHASE2_UI_WIREFRAME.md  README.md  SPRINTS.md  pyproject.toml
docs/: construction_rules.md  facility_layer_plan.md  local_build_ux.md  local_logistics_loop.md  local_operational_layer.md  rail_network_plan.md  resource_industry_plan.md  resource_relationship_atlas.md  tutorial_vertical_slice.md  ui_design_tokens.md  wiki.html
gaterail/: __init__.py
godot/: README.md  project.godot
saves/: tutorial_six_worlds.json
scripts/: godot_smoke_local_region.sh  godot_visual_smoke_local_region.sh
specs/: sprint16-polish.nlspec.md  sprint20bc-21c.nlspec.md
tests/: conftest.py  test_colony.py  test_finance.py  test_gate.py  test_godot_script_contracts.py  test_lore_alignment.py  test_phase4_warehouse_logic.py  test_schedule.py  test_simulation.py  test_sprint12_construction.py  test_sprint13a_construction_preview.py  test_sprint13b_route_creation.py  test_sprint13d_polish.py  test_sprint14a_buffer_distribution.py  test_sprint14b_transfer_pressure.py  test_sprint14c_node_recipes.py  test_sprint15a_gate_link_construction.py  test_sprint15b_route_gate_handoff.py  test_sprint15c_route_tuning.py  test_sprint16a_facility_foundation.py  test_sprint16b_facility_editing.py  test_sprint16c_polish.py  test_sprint17a_resource_backbone.py  test_sprint17b_resource_chains.py  test_sprint18_resource_industry.py  test_sprint19_gate_power_resources.py  test_sprint19_signals_blocks.py  (+26 more)
(+48 files in other folders)
